KAFKA-Shared: preserve nullable broker originals